[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpu-queue"
version = "0.1.0"
description = "A lightweight GPU job queue scheduler"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Adam Barla", email = "adam.barla@icloud.com" },
]
dependencies = [
    # Standard library only, no external deps needed for basic functionality
    # forcing 'uv' existence is runtime check
]

[project.scripts]
gpu-queue = "gpu_queue.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_queue"]
