[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpu-queue"
version = "0.1.0"
description = "A lightweight GPU job queue scheduler"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Adam Barla", email = "adam.barla@icloud.com" },
]
dependencies = [
    # Standard library only, no external deps needed for basic functionality
    # forcing 'uv' existence is runtime check
]

[project.scripts]
gpu-queue = "gpu_queue.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_queue"]

[dependency-groups]
dev = [
    "ty>=0.0.11",
    "ruff>=0.1.0",
    "pre-commit>=4.3.0",
    "nb-clean>=4.0.0",
]

[tool.ty]

[tool.ruff]
src = ["src"]

[tool.ruff.lint.isort]
known-first-party = ["gpu_queue"]
